testing/tests/ui/loop_cycle_empty.stderr
error: loop.cycle(…) cannot use an empty array
 --> tests/ui/loop_cycle_empty.rs:3:10
  |
3 | #[derive(Template)]
  |          ^^^^^^^^
  |
  = note: this error originates in the derive macro `Template` (in Nightly builds, run with -Z macro-backtrace for more info)
